--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Prerequisites
 *.d
 
+# Git files
+*.git
+
+
 # Compiled Object files
 *.slo
 *.lo
@@ -30,3 +34,5 @@
 *.exe
 *.out
 *.app
+
+.vscode
