issue 1.2 : J'ai refais le tp de maniere plus propre avec plus de commentaire

--- a/TP1/Makefile
+++ b/TP1/Makefile
@@ -1,16 +1,31 @@
-TARGET = thread.out
-CC = g++
-CFLAGS = -Wall -std=c++11 -pthread
+# Nom du compilateur
+CXX = g++
 
-# La cible 'all' compile le programme
+# Options de compilation
+CXXFLAGS = -Wall -Wextra -std=c++17
+
+# Nom du fichier exécutable
+TARGET = program.out
+
+# Détecter tous les fichiers .cpp dans le répertoire courant
+SRC = $(wildcard *.cpp)
+
+# Transformer les fichiers .cpp en .o pour la compilation
+OBJ = $(SRC:.cpp=.o)
+
+# Règle par défaut
 all: $(TARGET)
 
-# Compilation du programme
-$(TARGET): lancement.cpp
-	$(CC) $(CFLAGS) lancement.cpp -o $(TARGET)
+# Comment lier
+$(TARGET): $(OBJ)
+	$(CXX) $(CXXFLAGS) -o $@ $^
 
-# Nettoyage des fichiers compilés
+# Règle pour nettoyer les fichiers compilés
 clean:
-	rm -f $(TARGET)
+	rm -f $(OBJ) $(TARGET)
+
+# Règle pour les fichiers .cpp -> .o
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 .PHONY: all clean
